--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
         <button id="btnConfirmarVoto">Confirmar Voto</button>
     </div>
 
+    <div id="telaPreResultado" class="tela">
+        <h2>Votação Concluída!</h2>
+        <p>Os votos foram computados. Estão prontos para a revelação?</p>
+        <button id="btnMostrarVotacao">Mostrar Votação</button>
+    </div>
+
     <div id="telaResultado" class="tela">
         <h2>Resultado da Votação</h2>
         <div id="resultadoFinal"></div>
