Add 'Novo Grupo' button to button group

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
         <div class="button-group">
             <button id="btnVotarNovamente">Votar Novamente</button>
             <button id="btnJogarNovamente">Jogar Novamente</button>
+            <button id="btnNovoGrupo">Novo Grupo</button>
         </div>
     </div>
 
